--- a/package.json
+++ b/package.json
@@ -1,60 +1,62 @@
 {
-	"name": "iris-service-digital-display",
-	"version": "1.0.0",
-	"description": "iris digital-display service",
-	"main": "index.js",
-	"scripts": {
-		"test": "mocha ./build/**/*.test.js -r ./build/index.js",
-		"install": "gulp --gulpfile build.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/sdk-group/iris-service-digital-display.git"
-	},
-	"keywords": [
+  "name": "iris-service-digital-display",
+  "version": "1.0.0",
+  "description": "iris digital-display service",
+  "main": "index.js",
+  "scripts": {
+    "test": "mocha ./build/**/*.test.js -r ./build/index.js",
+    "install": "gulp --gulpfile build.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sdk-group/iris-service-digital-display.git"
+  },
+  "keywords": [
     "iris"
   ],
-	"babel": {
-		"presets": [
+  "babel": {
+    "presets": [
       "es2015-node5"
     ],
-		"babelrc": false
-	},
-	"author": "...",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/sdk-group/iris-service-digital-display/issues"
-	},
-	"homepage": "https://github.com/sdk-group/iris-service-digital-display#readme",
-	"devDependencies": {
-		"babel-plugin-transform-remove-console": "^6.8.0",
-		"babel-plugin-transform-strict-mode": "^6.18.0",
-		"babel-plugin-undeclared-variables-check": "^6.8.0",
-		"babel-preset-es2015": "^6.18.0",
-		"babel-preset-es2015-node5": "^1.2.0",
-		"babel-preset-node5": "^11.1.0",
-		"chai": "^3.5.0",
-		"del": "^2.2.2",
-		"gulp": "^3.9.1",
-		"gulp-babel": "^6.1.2",
-		"gulp-changed": "^1.3.2",
-		"gulp-concat": "^2.6.1",
-		"gulp-develop-server": "^0.5.2",
-		"gulp-livereload": "^3.8.1",
-		"gulp-mocha": "^3.0.1",
-		"gulp-nodemon": "^2.2.1",
-		"gulp-plumber": "^1.1.0",
-		"gulp-sourcemaps": "^2.0.0-alpha",
-		"gulp-uglify": "^2.0.0",
-		"gulp-watch": "^4.3.11"
-	},
-	"dependencies": {
-		"bluebird": "^3.4.6",
-		"global-queue": "git+https://github.com/artificial-life/global-queue.git#experiments",
-		"iris-builder": "git+https://github.com/sdk-group/iris-builder.git",
-		"gulp": "^3.9.1",
-		"gulp-babel": "^6.1.2",
-		"lodash": "^4.17.2",
-		"resource-management-framework": "git+https://github.com/YuuKohaku/rmf-on-rdf.git"
-	}
+    "babelrc": false
+  },
+  "author": "...",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/sdk-group/iris-service-digital-display/issues"
+  },
+  "homepage": "https://github.com/sdk-group/iris-service-digital-display#readme",
+  "devDependencies": {
+    "babel-plugin-transform-remove-console": "^6.8.0",
+    "babel-plugin-transform-strict-mode": "^6.22.0",
+    "babel-plugin-undeclared-variables-check": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2015-node5": "^1.2.0",
+    "babel-preset-node5": "^12.0.0",
+    "chai": "^3.5.0",
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-changed": "^1.3.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-develop-server": "^0.5.2",
+    "gulp-livereload": "^3.8.1",
+    "gulp-mocha": "^3.0.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sourcemaps": "^2.4.0",
+    "gulp-uglify": "^2.0.1",
+    "gulp-watch": "^4.3.11"
+  },
+  "dependencies": {
+    "bluebird": "^3.4.7",
+    "crc-16": "^0.1.3",
+    "global-queue": "git+https://github.com/artificial-life/global-queue.git#experiments",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "iconv": "^2.2.1",
+    "iris-builder": "git+https://github.com/sdk-group/iris-builder.git",
+    "lodash": "^4.17.4",
+    "resource-management-framework": "git+https://github.com/YuuKohaku/rmf-on-rdf.git"
+  }
 }
